<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:fitsSystemWindows="false"
    tools:context=".view.activities.AjustesActivity"
    tools:ignore="HardcodedText">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_ajustes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/ajustes_titulo"
        app:titleCentered="true"
        android:background="?attr/colorSurface"
        app:titleTextAppearance="@style/TextAppearance.Aeris.Toolbar.Title" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fondo_nav_inferior"
        android:elevation="8dp"
        app:itemIconTint="@color/color_nav_inferior"
        app:itemTextColor="@color/color_nav_inferior"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/inferior_nav_menu" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_ajustes"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ajustes_unidades"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/label_temperatura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustes_temperatura"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/subtitle_temperatura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustes_escoge_opcion"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_temperatura" />

                    <TextView
                        android:id="@+id/label_celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="°C"
                        android:textAppearance="?attr/textAppearanceLabelLarge"
                        app:layout_constraintEnd_toStartOf="@id/switch_temperatura"
                        app:layout_constraintTop_toTopOf="@id/switch_temperatura"
                        app:layout_constraintBottom_toBottomOf="@id/switch_temperatura"
                        android:layout_marginEnd="8dp"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_temperatura"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintEnd_toStartOf="@id/label_fahrenheit"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:id="@+id/label_fahrenheit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="°F"
                        android:textAppearance="?attr/textAppearanceLabelLarge"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/switch_temperatura"
                        app:layout_constraintBottom_toBottomOf="@id/switch_temperatura"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/label_viento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustes_velocidad_viento"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/subtitle_viento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustes_escoge_opcion"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_viento" />

                    <TextView
                        android:id="@+id/label_kph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="km/h"
                        android:textAppearance="?attr/textAppearanceLabelLarge"
                        app:layout_constraintEnd_toStartOf="@id/switch_viento"
                        app:layout_constraintTop_toTopOf="@id/switch_viento"
                        app:layout_constraintBottom_toBottomOf="@id/switch_viento"
                        android:layout_marginEnd="8dp"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_viento"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintEnd_toStartOf="@id/label_mph"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:id="@+id/label_mph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="mph"
                        android:textAppearance="?attr/textAppearanceLabelLarge"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/switch_viento"
                        app:layout_constraintBottom_toBottomOf="@id/switch_viento"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/ajustes_tema_app"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/label_tema"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustes_modo_oscuro"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/subtitle_tema"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustes_escoge_opcion"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_tema" />

                    <TextView
                        android:id="@+id/label_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustes_tema_light"
                        android:textAppearance="?attr/textAppearanceLabelLarge"
                        app:layout_constraintEnd_toStartOf="@+id/switch_tema"
                        app:layout_constraintTop_toTopOf="@+id/switch_tema"
                        app:layout_constraintBottom_toBottomOf="@+id/switch_tema"
                        android:layout_marginEnd="8dp"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_tema"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        app:layout_constraintEnd_toStartOf="@+id/label_dark"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="8dp"/>

                    <TextView
                        android:id="@+id/label_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajustes_tema_dark"
                        android:textAppearance="?attr/textAppearanceLabelLarge"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/switch_tema"
                        app:layout_constraintBottom_toBottomOf="@+id/switch_tema"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/acerca_de_titulo"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/acerca_de_texto"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
